# prospect-research-platform

./: .env.example  .gitignore  =2.0.0  =7.0.0  CLAUDE.md  Makefile  README.md  dev-start.bat  main.py  pyproject.toml  requirements.txt  setup-mcps.md  setup-windows.bat
.claude-code/: mcp-config.json  settings.json
.github/workflows/: ci.yml
api/: main.py
docs/: README.md  setup-windows.md  swagger-features.md
scripts/: README.md  setup-dev-env.py
scripts/windows/: dev-start.bat  dev-stop.bat  qa-check.bat  quick-start-windows.bat  test-api.bat
src/prospect_research/: __init__.py
src/prospect_research/agents/: base_agent.py
src/prospect_research/agents/research/: __init__.py  company_research_agent.py
src/prospect_research/api/: main.py
src/prospect_research/config/: settings.py
src/prospect_research/tools/web_search/: __init__.py  serper_search.py
src/prospect_research/utils/: database.py  logger.py
utils/: database.py  logger.py
